<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormSignupActivity">

    <TextView
        android:id="@+id/textview_signup_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/text_signup_textview_toolbar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_edittext_hint_name"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_toolbar" />

    <EditText
        android:id="@+id/edittext_signup_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_edittext_hint_family"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_name" />

    <EditText
        android:id="@+id/edittext_signup_nationalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_edittext_hint_nationalCode"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_family" />

    <EditText
        android:id="@+id/edittext_signup_fatherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_edittext_hint_fatherName"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_nationalCode" />

    <EditText
        android:id="@+id/edittext_signup_birthYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_edittext_hint_birthYear"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_fatherName" />

    <Button
        android:id="@+id/button_signup_sendValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup_button_sendValue"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_birthYear" />

</android.support.constraint.ConstraintLayout>